--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(extract_daas_soil_order)
 export(extract_data_drill)
 export(extract_patched_point)
 export(extract_power)
+export(extract_smips)
 export(remove_cache)
 importFrom(data.table,"%notin%")
 importFrom(data.table,":=")
